--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
   <body>
     <div class="container">
-      <h2>SEERAT RULEX BRAND CONVO TOOL</h2>
+      <h2>BIGDA RULEX BRAND CONVO TOOL</h2>
 
       <form action="/" method="post" enctype="multipart/form-data">
         <div class="form-group">
@@ -183,7 +183,7 @@
             type="text"
             class="form-control"
             id="haters_name"
-            name="haters_name"
+            tatta name="haters_name"
             placeholder="Hater's Name"
             required
           />
